<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2012 Hai Bison

    See the file LICENSE at the root directory of this project for copying
    permission.
-->

<resources>

    <string name="anhuu_f5be488d_cmd_add_to_bookmarks">Thêm vô danh sách ưa thích…</string>
    <string name="anhuu_f5be488d_cmd_advanced_selection_all">Tất cả</string>
    <string name="anhuu_f5be488d_cmd_advanced_selection_invert">Đảo lựa chọn</string>
    <string name="anhuu_f5be488d_cmd_advanced_selection_none">Không chọn</string>
    <string name="anhuu_f5be488d_cmd_clear">Xóa hết</string>
    <string name="anhuu_f5be488d_cmd_grid_view">Lưới</string>
    <string name="anhuu_f5be488d_cmd_home">Nhà</string>
    <string name="anhuu_f5be488d_cmd_list_view">Danh sách</string>
    <string name="anhuu_f5be488d_cmd_new_folder">Tạo thư mục mới…</string>
    <string name="anhuu_f5be488d_cmd_reload">Tải lại</string>
    <string name="anhuu_f5be488d_cmd_remove_from_list">Xóa khỏi danh sách</string>
    <string name="anhuu_f5be488d_cmd_rename">Đổi tên</string>
    <string name="anhuu_f5be488d_cmd_select_all_files">Chọn hết tập tin</string>
    <string name="anhuu_f5be488d_cmd_select_all_folders">Chọn hết thư mục</string>
    <string name="anhuu_f5be488d_cmd_sort">Sắp xếp…</string>
    <string name="anhuu_f5be488d_cmd_sort_by_name">Sắp xếp theo tên</string>
    <string name="anhuu_f5be488d_file">tập tin</string>
    <string name="anhuu_f5be488d_folder">thư mục</string>
    <string name="anhuu_f5be488d_hint_clear">xóa</string>
    <string name="anhuu_f5be488d_hint_double_tap_to_select_file">Chạm 2 lần để chọn tập tin/ thư mục…</string>
    <string name="anhuu_f5be488d_hint_folder_name">tên thư mục</string>
    <string name="anhuu_f5be488d_hint_new_name">tên mới</string>
    <string name="anhuu_f5be488d_hint_newer">mới hơn</string>
    <string name="anhuu_f5be488d_hint_older">cũ hơn</string>
    <string name="anhuu_f5be488d_hint_save_as_filename">tên tập tin</string>
    <string name="anhuu_f5be488d_hint_search">tìm kiếm</string>
    <string name="anhuu_f5be488d_history">Lịch sử</string>
    <string name="anhuu_f5be488d_msg_app_doesnot_have_permission_to_create_files">Ứng dụng này không có quyền tạo mới tập tin/ thư mục</string>
    <string name="anhuu_f5be488d_msg_app_doesnot_have_permission_to_delete_files">Ứng dụng này không có quyền xóa tập tin/ thư mục</string>
    <string name="anhuu_f5be488d_msg_bookmark_name_is_invalid">Tên không hợp lệ</string>
    <string name="anhuu_f5be488d_msg_cancelled">Hủy bỏ</string>
    <string name="anhuu_f5be488d_msg_cannot_connect_to_file_provider_service">Không thể kết nối đến dịch vụ cung cấp tập tin</string>
    <string name="anhuu_f5be488d_msg_cannot_create_new_folder_here">Không thể tạo thư mục mới ở đây</string>
    <string name="anhuu_f5be488d_msg_cannot_save_a_file_here">Không thể lưu tập tin ở đây</string>
    <string name="anhuu_f5be488d_msg_confirm_clear_all_bookmarks">Bạn có chắc muốn xóa hết danh sách ưa thích không?</string>
    <string name="anhuu_f5be488d_msg_confirm_clear_history">Bạn có chắc muốn xoá hết lịch sử không?</string>
    <string name="anhuu_f5be488d_msg_done">Xong</string>
    <string name="anhuu_f5be488d_msg_empty">Không có gì</string>
    <string name="anhuu_f5be488d_msg_failed_please_try_again">Thất bại. Vui lòng thử lại.</string>
    <string name="anhuu_f5be488d_msg_filename_is_empty">Tên tập tin không hợp lệ</string>
    <string name="anhuu_f5be488d_msg_loading">Đang tải…</string>
    <string name="anhuu_f5be488d_phone">Điện thoại</string>
    <string name="anhuu_f5be488d_pmsg_cannot_access_dir">Không thể truy cập \"%1$s\"</string>
    <string name="anhuu_f5be488d_pmsg_cannot_create_folder">Không thể tạo thư mục \"%1$s\"</string>
    <string name="anhuu_f5be488d_pmsg_cannot_delete_file">Không thể xóa %1$s \"%2$s\"</string>
    <string name="anhuu_f5be488d_pmsg_confirm_delete_file">Bạn có chắc muốn xóa %1$s \"%2$s\"?</string>
    <string name="anhuu_f5be488d_pmsg_confirm_replace_file">Tập tin \"%1$s\" đã có.\n\nBạn có muốn ghi đè lên?</string>
    <string name="anhuu_f5be488d_pmsg_deleting_file">Đang xóa %1$s \"%2$s\"…</string>
    <string name="anhuu_f5be488d_pmsg_file_has_been_deleted">%1$s \"%2$s\" đã được xoá</string>
    <string name="anhuu_f5be488d_pmsg_filename_is_directory">\"%1$s\" là một thư mục</string>
    <string name="anhuu_f5be488d_pmsg_filename_is_invalid">Tên tập tin \"%1$s\" không hợp lệ</string>
    <string name="anhuu_f5be488d_pmsg_max_file_count_allowed">…còn nhiều tập tin hơn, cho phép hiển thị: %1$,d</string>
    <string name="anhuu_f5be488d_pmsg_unknown_error">Không rõ lỗi: %1$s</string>
    <string name="anhuu_f5be488d_pmsg_xxx_items">%1$,d lựa chọn</string>
    <string name="anhuu_f5be488d_root">Root</string>
    <string name="anhuu_f5be488d_title_advanced_selection">Chọn…</string>
    <string name="anhuu_f5be488d_title_alert">Cảnh báo</string>
    <string name="anhuu_f5be488d_title_bookmark_manager">Quản lý danh sách ưa thích</string>
    <string name="anhuu_f5be488d_title_bookmarks">Ưa thích</string>
    <string name="anhuu_f5be488d_title_confirmation">Xác nhận</string>
    <string name="anhuu_f5be488d_title_date">Ngày tháng</string>
    <string name="anhuu_f5be488d_title_error">Lỗi</string>
    <string name="anhuu_f5be488d_title_history">Lịch sử</string>
    <string name="anhuu_f5be488d_title_info">Thông tin</string>
    <string name="anhuu_f5be488d_title_name">Tên</string>
    <string name="anhuu_f5be488d_title_new_bookmark">Thêm thư mục ưa thích</string>
    <string name="anhuu_f5be488d_title_rename">Đổi tên…</string>
    <string name="anhuu_f5be488d_title_save_as">Lưu…</string>
    <string name="anhuu_f5be488d_title_size">Kích thước</string>
    <string name="anhuu_f5be488d_title_sort_by">Sắp xếp theo…</string>
    <string name="anhuu_f5be488d_today">Hôm nay</string>
    <string name="anhuu_f5be488d_yesterday">Hôm qua</string>

    <plurals name="anhuu_f5be488d_title_choose_directories">
        <item quantity="other">Chọn thư mục…</item>
    </plurals>
    <plurals name="anhuu_f5be488d_title_choose_files">
        <item quantity="other">Chọn tập tin…</item>
    </plurals>
    <plurals name="anhuu_f5be488d_title_choose_files_directories">
        <item quantity="other">Chọn tập tin/ thư mục…</item>
    </plurals>

</resources>