<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2012 Hai Bison

    See the file LICENSE at the root directory of this project for copying
    permission.
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:anhuu="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/anhuu_menuitem_bookmarks"
        android:icon="?attr/anhuu_f5be488d_ic_menu_bookmarks"
        android:title="@string/anhuu_f5be488d_title_bookmarks"
        anhuu:showAsAction="ifRoom"/>
    <item
        android:id="@+id/anhuu_menuitem_home"
        android:icon="?attr/anhuu_f5be488d_ic_menu_home"
        android:title="@string/anhuu_f5be488d_cmd_home"
        anhuu:showAsAction="ifRoom"/>
    <item
        android:id="@+id/anhuu_menuitem_history"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/anhuu_f5be488d_history"
        anhuu:showAsAction="ifRoom"/>
    <item
        android:id="@+id/anhuu_menuitem_sort"
        android:title="@string/anhuu_f5be488d_cmd_sort"
        anhuu:showAsAction="ifRoom"/>
    <item
        android:id="@+id/anhuu_menuitem_switch_viewmode"
        android:title="@null"
        anhuu:showAsAction="ifRoom"/>
    <item
        android:id="@+id/anhuu_menuitem_new_folder"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/anhuu_f5be488d_cmd_new_folder"
        anhuu:showAsAction="ifRoom"/>

</menu>