<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2012 Hai Bison

    See the file LICENSE at the root directory of this project for copying
    permission.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:anhuu="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/anhuu_viewgroup_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/anhuu_f5be488d_5dp" >

        <TextView
            android:id="@+id/anhuu_textview_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/anhuu_button_search"
            android:drawableLeft="@android:drawable/ic_menu_recent_history"
            android:gravity="center_vertical"
            android:text="@string/anhuu_f5be488d_history"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:id="@+id/anhuu_button_search"
            style="@style/anhuu_f5be488d_widget_search_view_button_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/anhuu_f5be488d_15dp"
            android:layout_toLeftOf="@+id/anhuu_viewgroup_navigators"
            android:contentDescription="@string/anhuu_f5be488d_hint_search"
            android:enabled="false"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/anhuu_viewgroup_navigators"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/anhuu_button_go_back"
                style="@style/anhuu_f5be488d_action_navi_left"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/anhuu_f5be488d_hint_newer"
                android:enabled="false" />

            <ImageView
                android:id="@+id/anhuu_button_go_forward"
                style="@style/anhuu_f5be488d_action_navi_right"
                android:layout_marginTop="0dp"
                android:contentDescription="@string/anhuu_f5be488d_hint_older"
                android:enabled="false" />
        </LinearLayout>
    </RelativeLayout>

    <com.haibison.android.anhuu.ui.widget.AnHuuSearchView
        android:id="@+id/anhuu_search_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/anhuu_viewgroup_header"
        android:layout_marginBottom="@dimen/anhuu_f5be488d_5dp"
        android:layout_marginLeft="@dimen/anhuu_f5be488d_15dp"
        android:layout_marginRight="@dimen/anhuu_f5be488d_15dp"
        android:layout_marginTop="@dimen/anhuu_f5be488d_5dp"
        android:visibility="gone"
        anhuu:delayTimeSubmission="@integer/anhuu_f5be488d_search_view_delay_time_submission"
        anhuu:enabled="false"
        anhuu:hint="@string/anhuu_f5be488d_hint_search" />

    <View
        android:id="@+id/anhuu_view_header_divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/anhuu_f5be488d_viewgroup_button_locations_bottom_divider_height"
        android:layout_below="@id/anhuu_search_view"
        android:background="@color/anhuu_f5be488d_border_line_dark" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/anhuu_view_header_divider" >

        <RelativeLayout
            android:id="@+id/anhuu_viewgroup_listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone" >

            <ExpandableListView
                android:id="@+id/anhuu_listview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fastScrollEnabled="true"
                android:groupIndicator="@null" >
            </ExpandableListView>

            <TextView
                android:id="@+id/anhuu_empty_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/anhuu_f5be488d_15dp"
                android:gravity="center"
                android:text="@string/anhuu_f5be488d_msg_empty"
                android:textStyle="italic"
                android:visibility="gone" />
        </RelativeLayout>

        <include
            android:id="@+id/anhuu_view_loading"
            layout="@layout/anhuu_f5be488d_view_loading" />
    </RelativeLayout>

</RelativeLayout>