<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2012 Hai Bison

    See the file LICENSE at the root directory of this project for copying
    permission.
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center" >

        <TableRow
            android:layout_marginLeft="@dimen/anhuu_f5be488d_10dp"
            android:layout_marginRight="@dimen/anhuu_f5be488d_10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/anhuu_f5be488d_30dp"
                android:text="@string/anhuu_f5be488d_title_name"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/anhuu_f5be488d_button_sort_by_name_asc"
                style="@style/anhuu_f5be488d_button_sort"
                android:contentDescription="@string/anhuu_f5be488d_title_name"
                android:drawableRight="?attr/anhuu_f5be488d_ic_button_sort_by_name_asc" />

            <Button
                android:id="@+id/anhuu_f5be488d_button_sort_by_name_desc"
                style="@style/anhuu_f5be488d_button_sort"
                android:contentDescription="@string/anhuu_f5be488d_title_name"
                android:drawableRight="?attr/anhuu_f5be488d_ic_button_sort_by_name_desc" />
        </TableRow>

        <TableRow
            android:layout_marginLeft="@dimen/anhuu_f5be488d_10dp"
            android:layout_marginRight="@dimen/anhuu_f5be488d_10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/anhuu_f5be488d_30dp"
                android:text="@string/anhuu_f5be488d_title_size"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/anhuu_f5be488d_button_sort_by_size_asc"
                style="@style/anhuu_f5be488d_button_sort"
                android:contentDescription="@string/anhuu_f5be488d_title_size"
                android:drawableRight="?attr/anhuu_f5be488d_ic_button_sort_by_size_asc" />

            <Button
                android:id="@+id/anhuu_f5be488d_button_sort_by_size_desc"
                style="@style/anhuu_f5be488d_button_sort"
                android:contentDescription="@string/anhuu_f5be488d_title_size"
                android:drawableRight="?attr/anhuu_f5be488d_ic_button_sort_by_size_desc" />
        </TableRow>

        <TableRow
            android:layout_marginLeft="@dimen/anhuu_f5be488d_10dp"
            android:layout_marginRight="@dimen/anhuu_f5be488d_10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="@dimen/anhuu_f5be488d_30dp"
                android:text="@string/anhuu_f5be488d_title_date"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <Button
                android:id="@+id/anhuu_f5be488d_button_sort_by_date_asc"
                style="@style/anhuu_f5be488d_button_sort"
                android:contentDescription="@string/anhuu_f5be488d_title_date"
                android:drawableRight="?attr/anhuu_f5be488d_ic_button_sort_by_date_asc" />

            <Button
                android:id="@+id/anhuu_f5be488d_button_sort_by_date_desc"
                style="@style/anhuu_f5be488d_button_sort"
                android:contentDescription="@string/anhuu_f5be488d_title_date"
                android:drawableRight="?attr/anhuu_f5be488d_ic_button_sort_by_date_desc" />
        </TableRow>
    </TableLayout>

</RelativeLayout>